hphp/hack/test/typecheck/class_refinements/is-expr.php.exp
ERROR: File "is-expr.php", line 11, characters 17-44:
Type refinements cannot appear on the right-hand side of an is-expression. (NastCheck[3101])
ERROR: File "is-expr.php", line 13, characters 27-51:
Type refinements cannot appear on the right-hand side of an is-expression. (NastCheck[3101])
